--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.17",
+    "lucide": "^0.554.0",
+    "lucide-vue-next": "^0.554.0",
     "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
